--- a/sai.html
+++ b/sai.html
@@ -1,4 +1,4 @@
 <button> submit</button>
 <button>wish <menu type="context"></menu></button>
-<button>login</button>
-<button>loged in</button>
+<button disabled="disabled"><button type="button"></button></button>
+<button type="reset"></button>
